# Clipboard

./: .gitignore  .travis.yml  Cargo.toml  Makefile  Readme.md  dockerfile
src/: logging.rs  main.rs
src/api/: api_clipboard.rs  api_storage.rs  mod.rs  routers.rs
src/models/: minio_storage.rs  mod.rs  model.rs  mongo_clipboard.rs
src/utils/: crypt.rs  env.rs  file.rs  log.rs  mod.rs
