[package]
name = "clipboard"
version = "0.1.0"
authors = ["wotmshuaisi <wotmshuaisi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.8"
actix-service = "0.4.2"
futures = "0.1.29"
# listenfd = "0.3.3"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
slog-scope = "4.3.0"
chrono = "0.4.9"
serde = "1.0.102"
mongodb = { package = "mongodb_cwal", version = "0.4" }
nanoid = "0.2.0"
bcrypt = "0.6.1"
openssl = "0.10.26"
base64 = "0.11.0"