[package]
name = "clipboard"
version = "0.1.0"
authors = ["wotmshuaisi <wotmshuaisi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-service = "1.0.0"
actix-multipart ="0.2.0"
futures = "0.3.1"
# listenfd = "0.3.3"
slog = "2.5.2"
slog-term = "2.4.2"
slog-async = "2.3.0"
slog-scope = "4.3.0"
chrono = "0.4.9"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
mongodb = { package = "mongodb_cwal", version = "0.4" }
nanoid = "0.2.0"
bcrypt = "0.6.1"
openssl = "0.10.55"
json = "0.12.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"